# react-native-enriched-markdown

./: README.md  ReactNativeEnrichedMarkdown.podspec  RichText.podspec  lefthook.yml  package.json
android/: CMakeLists.txt  build.gradle
android/src/main/: baseline-prof.txt
android/src/main/cpp/: jni-adapter.cpp
android/src/main/java/com/richtext/: MeasurementStore.kt  RichTextView.kt  RichTextViewLayoutManager.kt  RichTextViewManager.kt  RichTextViewPackage.kt
android/src/main/java/com/richtext/events/: LinkPressEvent.kt
android/src/main/java/com/richtext/parser/: MarkdownASTNode.kt  Parser.kt
android/src/main/java/com/richtext/renderer/: ASTBlockquoteRenderer.kt  ASTCodeRenderer.kt  ASTDocumentRenderer.kt  ASTEmphasisRenderer.kt  ASTHeadingRenderer.kt  ASTImageRenderer.kt  ASTLineBreakRenderer.kt  ASTLinkRenderer.kt  ASTNodeRenderer.kt  ASTParagraphRenderer.kt  ASTStrongRenderer.kt  ASTTextRenderer.kt  BlockStyleContext.kt  BlockquoteRenderer.kt  CodeRenderer.kt  DocumentRenderer.kt  EmphasisRenderer.kt  HeadingRenderer.kt  ImageRenderer.kt  InlineCodeRenderer.kt  LineBreakRenderer.kt  LinkRenderer.kt  ListContextManager.kt  ListItemRenderer.kt  ListRenderer.kt  NodeRenderer.kt  OrderedListRenderer.kt  ParagraphRenderer.kt  Renderer.kt  SpanStyleCache.kt  StrongRenderer.kt  TextRenderer.kt  UnorderedListRenderer.kt
android/src/main/java/com/richtext/spans/: BaseListSpan.kt  BlockquoteSpan.kt  CallbackURLSpan.kt  CodeBlockSpan.kt  CodeStyleSpan.kt  EmphasisSpan.kt  ForceRedrawSpan.kt  HeadingSpan.kt  ImageSpan.kt  InlineCodeBackgroundSpan.kt  InlineCodeSpan.kt  LineHeightSpan.kt  LinkSpan.kt  MarginBottomSpan.kt  OrderedListSpan.kt  RichTextBlockquoteSpan.kt  RichTextBoldSpan.kt  RichTextCodeStyleSpan.kt  RichTextEmphasisSpan.kt  RichTextHeadingSpan.kt  RichTextImageSpan.kt  RichTextLinkSpan.kt  RichTextMarginBottomSpan.kt  RichTextParagraphSpan.kt  RichTextStrongSpan.kt  RichTextTextSpan.kt  StrongSpan.kt  TextSpan.kt  UnorderedListSpan.kt
android/src/main/java/com/richtext/styles/: BaseBlockStyle.kt  HeadingStyle.kt  OrderedListStyle.kt  RichTextStyle.kt  StyleConfig.kt  UnorderedListStyle.kt
android/src/main/java/com/richtext/theme/: HeaderConfig.kt  RichTextTheme.kt
android/src/main/java/com/richtext/utils/: AsyncDrawable.kt  CodeBackground.kt  HTMLGenerator.kt  SelectionActionMode.kt  Utils.kt
android/src/main/java/com/swmansion/enriched/markdown/: MeasurementStore.kt
android/src/main/java/com/swmansion/enriched/markdown/parser/: MarkdownASTNode.kt
android/src/main/java/com/swmansion/enriched/markdown/renderer/: BlockStyleContext.kt  BlockquoteRenderer.kt  CodeBlockRenderer.kt  CodeRenderer.kt  CodeSyntaxHighlighter.kt  HeadingRenderer.kt  ImageRenderer.kt  MathRenderer.kt  NodeRenderer.kt  SpanStyleCache.kt  TextRenderer.kt
android/src/main/java/com/swmansion/enriched/markdown/spans/: BaseListSpan.kt  BlockquoteSpan.kt  CodeBackgroundSpan.kt  CodeBlockSpan.kt  CodeSpan.kt  ImageSpan.kt  MarginBottomSpan.kt  OrderedListSpan.kt  UnorderedListSpan.kt
android/src/main/java/com/swmansion/enriched/markdown/utils/: HTMLGenerator.kt  MarkdownExtractor.kt
android/src/main/java/com/swmansion/enriched/markdown/utils/text/span/: SpanFlags.kt
android/src/main/jni/: CMakeLists.txt
android/src/main/jni/react/renderer/components/RichTextViewSpec/: RichTextComponentDescriptor.h  RichTextMeasurementManager.cpp  RichTextMeasurementManager.h  RichTextShadowNode.cpp  RichTextShadowNode.h  RichTextState.cpp  RichTextState.h  conversions.h
(+97 files in other folders)
